# auto-clicker-vue

./: .gitattributes  .gitignore  CHANGES.md  LICENSE  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/: renovate.json
.github/workflows/: release.yml  test-build.yml  test.yml
src/: App.vue  main.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: ClickerControl.vue
src/composables/: useAutoClicker.ts  useGlobalHotkey.ts  useGlobalMouseActivity.ts  useTauriEvent.ts
src/constants/: clicker.ts
tests/setup/: install-pinia.ts
